<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                             http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    
    <groupId>edu.handong.csee.isel.ao</groupId>
    <artifactId>ao-java</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>
    
    <properties>
        <java.version>17</java.version>
        <grpc.version>1.77.0</grpc.version>
        <protobuf.version>3.25.8</protobuf.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <modules>
        <module>ao-core</module>
        <module>ao-framework</module>
    </modules>

    <profiles>
        <profile>
            <id>isa</id>
            <properties>
                <exec.mainClass>edu.handong.csee.isel.ao.examples.AgentISA</exec.mainClass>
            </properties>
        </profile>
        <profile>
            <id>iua</id>
            <properties>
                <exec.mainClass>edu.handong.csee.isel.ao.examples.AgentIUA</exec.mainClass>
            </properties>
        </profile>
        <profile>
            <id>ioa</id>
            <properties>
                <exec.mainClass>edu.handong.csee.isel.ao.examples.AgentIOA</exec.mainClass>
            </properties>
        </profile>
    </profiles>

    <dependencies>
        <!-- grpc -->
        <dependency>
            <groupId>io.grpc</groupId>
            <artifactId>grpc-netty-shaded</artifactId>
            <version>${grpc.version}</version>
        </dependency>
        <dependency>
            <groupId>io.grpc</groupId>
            <artifactId>grpc-protobuf</artifactId>
            <version>${grpc.version}</version>
        </dependency>
        <dependency>
            <groupId>io.grpc</groupId>
            <artifactId>grpc-stub</artifactId>
            <version>${grpc.version}</version>
        </dependency>
        <!-- protobuf -->
        <dependency>
            <groupId>com.google.protobuf</groupId>
            <artifactId>protobuf-java</artifactId>
            <version>3.25.8</version>
        </dependency>
        <!-- javacv -->
        <dependency>
            <groupId>org.bytedeco</groupId>
            <artifactId>javacv-platform</artifactId>
            <version>1.5.9</version>
        </dependency>
         <!-- gson -->
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.13.2</version>
        </dependency>
        <!-- slf4j -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>2.0.13</version>
        </dependency>
        <!-- javax annotation -->
        <!-- for generated sources -->
        <dependency>
            <groupId>javax.annotation</groupId>
            <artifactId>jsr250-api</artifactId>
            <version>1.0</version>
        </dependency>
    </dependencies>
    
    <build>
        <outputDirectory>${basedir}/../target/classes</outputDirectory>

        <plugins>
            <!-- protobuf plugin -->
            <!-- generate protobuf message and grpc stub source code from -->
            <!-- proto files -->
            <plugin>
                <groupId>io.github.ascopes</groupId>
                <artifactId>protobuf-maven-plugin</artifactId>
                <version>4.1.1</version>

                <configuration>
                    <protoc>${protobuf.version}</protoc>
                    <sourceDirectories>
                        <sourceDirectory>${basedir}/../ao-proto/src/main/proto</sourceDirectory>
                    </sourceDirectories>
                    <outputDirectory>${basedir}/../target</outputDirectory>
                    <plugins>
                        <plugin kind="binary-maven">
                            <groupId>io.grpc</groupId>
                            <artifactId>protoc-gen-grpc-java</artifactId>
                            <version>${grpc.version}</version>
                        </plugin>
                    </plugins>
                </configuration>
            </plugin>
            <!-- exec plugin -->
            <!-- execute main class -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.5.0</version>

                <configuration>
                    <mainClass>${exec.mainClass}</mainClass>
                    <addResourcesToClasspath>true</addResourcesToClasspath>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
